--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,6 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   max-width: 800px;
-  text-align: center;
   margin: auto;
   padding: 10px;
   list-style:none;
@@ -9,18 +8,24 @@ body {
 body > * {
   margin-bottom: 30px;
 }
-hr {
-  width: 50%;
+.resume-and-github {
+  display: flex;
+}
+.resume-and-github div a {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+
+  padding: 10px;
+}
+img {
+  display: block;
 }
 p {
   text-align: left;
   text-indent: 3mm; 
 }
-.resume-and-github > a {
-  margin-left: 15px;
-  margin-right: 15px;
-}
-div:last-child {
+span {
   padding-top: 40px;
   color: #bbb;
 }
