--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,17 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 18px;
   max-width: 800px;
   margin: auto;
   padding: 10px;
   list-style:none;
+}
+h1 {
+  font-size: 3em;
+  line-height: 0.6em;
+}
+h2 {
+  font-size: 2em;
 }
 body > * {
   margin-bottom: 30px;
