--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,6 +25,10 @@ body > * {
   align-items: center;
 
   padding: 10px;
+  font-size: 1.3em;
+}
+.resume-and-github div a img {
+  padding-top: 8px;
 }
 img {
   display: block;
