--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,9 +12,13 @@ h1 {
 }
 h2 {
   font-size: 2em;
+  margin-bottom: 0;
 }
-body > * {
-  margin-bottom: 30px;
+h3 {
+  margin: 10px 0;
+}
+ul {
+  margin: 0;
 }
 .resume-and-github {
   display: flex;
