update my title

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,8 @@ ul {
 }
 .resume-and-github {
   display: flex;
+	flex-flow: row wrap;
+	max-width: 750px;
 }
 .resume-and-github div a {
   display: flex;
